# visual-electric

./: .gitignore  CMakeLists.txt  README.md  main.cpp  numpy_test.py  plan.md  plan.txt  requirements.txt
include/: PointCharge.hpp  parse.hpp  parse_json.hpp  velectric.cuh  velectric.hpp
media/videos/visualize/480p15/partial_movie_files/SquareToCircle/: partial_movie_file_list.txt
media/videos/visualize/480p15/partial_movie_files/visualize/: partial_movie_file_list.txt
src/: PointCharge.cpp  extract.py  graphs.py  parse.cpp  problem1.json  problem1.txt  velectric.cpp  velectric.cu  visualize.py
tests/: problem1.json
